changing browse route

--- a/catalogue/templates/browse.html
+++ b/catalogue/templates/browse.html
@@ -140,7 +140,7 @@
 
         $('#catalogue').graphview({     
             "target": "/query",
-            "datatype": "JSONP",
+            "datatype": "JSON",
             "pushstate": false,
             "searchhintline": "type search terms and click enter to search",
             "titlefield": "record.title.exact",
