--- a/catalogue/templates/browse.html
+++ b/catalogue/templates/browse.html
@@ -80,6 +80,7 @@
             var details = '<div class="col-md-6"><div class="well" style="padding:5px;height:250px;overflow:hidden;border-color:#187c83;border-width:3px;background-color:#fff;color:#92ce73;">';     
             details += '<p>';
             var first = true;
+            alert(JSON.stringify(data,"","    "));
             for ( var i in data.record.author ) {
                 if ( first ) {
                     first = false;
