changing browse route

--- a/catalogue/templates/browse.html
+++ b/catalogue/templates/browse.html
@@ -92,10 +92,10 @@
                 }
             }
             if ( data.record.year ) {
-                details += ' (' + data.record.year + ')<br>';
+                details += ' (' + data.record.year + ')';
             }
             if ( data.record.title ) {
-                details += '<span style="color:#187c83;font-weight:bold;font-size:1.8em;">' + data.record.title + '</span>';
+                details += '<br><span style="color:#187c83;font-weight:bold;font-size:1.8em;">' + data.record.title + '</span>';
             }
             if ( data.record.publisher ) {
                 if ( data.record.publisher.name ) {
