changing browse route

--- a/catalogue/templates/browse.html
+++ b/catalogue/templates/browse.html
@@ -105,7 +105,7 @@
             if ( data.record.link ) {
                 if ( data.record.link[0] ) {
                     if ( data.record.link[0].url ) {
-                        details += '<br><a target="_blank" href="' + data.record.link[0].url + '">' + data.record.link[0].url + '</a>';
+                        details += '<br><a target="_blank" href="http://canary.contentmine.org/demo?url=' + data.record.link[0].url + '">Put it through canary</a>';
                     }
                 }
             }
