changing browse route

--- a/catalogue/templates/graph.html
+++ b/catalogue/templates/graph.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<body style="background-image:url('http://canary.cottagelabs.com/CM.png');background-repeat:no-repeat;background-position:middle;">
+<body style="background-image:url('http://canary.cottagelabs.com/CM.png');background-repeat:no-repeat;background-position:right bottom;">
         
     <div id="catgraph" style="height:100%;width:100%;min-height:600px;min-width:800px;"></div>
         
