adding set filter to fact display

--- a/catalogue/templates/fact.html
+++ b/catalogue/templates/fact.html
@@ -67,11 +67,12 @@
                     }         
                 },         
                 "facets":{                    
-                    "prefix terms": {"term":{"field":"pre.exact","suggest":true,"node":true}},
+                    "prefix terms": {"term":{"field":"pre","suggest":true,"node":true}},
                     "fact": {"term":{"field":"fact.exact","suggest":true,"node":true}},
-                    "postfix terms": {"term":{"field":"post.exact","suggest":true,"node":true}},
+                    "postfix terms": {"term":{"field":"post","suggest":true,"node":true}},
                     "keywords": {"term":{"field":"keywords.term","suggest":true,"node":true}},
                     "tags": {"term":{"field":"tags","suggest":true,"node":true}},
+                    "set": {"term":{"field":"set","suggest":true,"node":true}},
                     "source": {"term":{"field":"source.exact","suggest":true,"node":true}}
                 },    
                 "size":20
