--- a/catalogue/templates/browse.html
+++ b/catalogue/templates/browse.html
@@ -80,6 +80,9 @@
             var details = '<div class="col-md-12"><div class="well" style="padding:5px;overflow:hidden;border-color:#187c83;border-width:3px;background-color:#fff;color:#92ce73;">';     
             details += '<p>';
             var first = true;
+            if ( !('record' in data) ) {
+                data.record = data;
+            }
             for ( var i in data.record.author ) {
                 alert(JSON.stringify(data.record.author[i],"","    "));
                 if ( first ) {
